--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 MealPreppers/.vs/MealPreppers/v16/.suo
 MealPreppers/.vs/MealPreppers/v16/.suo
 MealPreppers/.vs/MealPreppers/v16/.suo
+MealPreppers/.vs/MealPreppers/config/applicationhost.config
