--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ MealPreppers/.vs/MealPreppers/v16/.suo
 MealPreppers/.vs/MealPreppers/v16/.suo
 MealPreppers/.vs/MealPreppers/v16/.suo
 MealPreppers/.vs/MealPreppers/config/applicationhost.config
+MealPreppers/.vs/MealPreppers/v16/.suo
+MealPreppers/.vs/MealPreppers/config/applicationhost.config
+MealPreppers/.vs/MealPreppers/v16/.suo
+MealPreppers/.vs/MealPreppers/config/applicationhost.config
