--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ MealPreppers/.vs/MealPreppers/v16/.suo
 MealPreppers/.vs/MealPreppers/config/applicationhost.config
 MealPreppers/.vs/MealPreppers/v16/.suo
 MealPreppers/.vs/MealPreppers/config/applicationhost.config
+*.config
