--- a/MealPreppers/MealPreppers/MealPreppers.csproj
+++ b/MealPreppers/MealPreppers/MealPreppers.csproj
@@ -165,7 +165,10 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\Index\" />
     <Folder Include="Models\" />
+    <Folder Include="Scripts\Index\Model\" />
+    <Folder Include="Scripts\Index\Views\" />
     <Folder Include="Views\Home\Index\Left\" />
     <Folder Include="Views\Home\Index\Middle\" />
     <Folder Include="Views\Home\Index\Right\" />
