--- a/MealPreppers/MealPreppers/MealPreppers.csproj
+++ b/MealPreppers/MealPreppers/MealPreppers.csproj
@@ -162,12 +162,12 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\Index\Middle\_GridView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
     <Folder Include="Views\Home\Index\Left\" />
-    <Folder Include="Views\Home\Index\Middle\" />
     <Folder Include="Views\Home\Index\Right\" />
   </ItemGroup>
   <ItemGroup>
