--- a/MealPreppers/MealPreppers/MealPreppers.csproj
+++ b/MealPreppers/MealPreppers/MealPreppers.csproj
@@ -163,6 +163,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Index\Middle\_GridView.cshtml" />
+    <Content Include="Views\Home\Index\Left\_leftTopPanel.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -170,7 +171,6 @@
     <Folder Include="Models\" />
     <Folder Include="Scripts\Index\Model\" />
     <Folder Include="Scripts\Index\Views\" />
-    <Folder Include="Views\Home\Index\Left\" />
     <Folder Include="Views\Home\Index\Right\" />
   </ItemGroup>
   <ItemGroup>
