--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,7 @@ MealPreppers/MealPreppers/bin/MealPreppers.dll
 MealPreppers/.vs/MealPreppers/v16/.suo
 MealPreppers/.vs/MealPreppers/config/applicationhost.config
 *.config
+*.config
+MealPreppers/.vs/MealPreppers/v16/.suo
+*.cache
+*.cache
