--- a/MealPreppers/MealPreppers/MealPreppers.csproj
+++ b/MealPreppers/MealPreppers/MealPreppers.csproj
@@ -131,6 +131,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\CustomCss\Index\GridView\GridCss.css" />
     <Content Include="Content\CustomCss\Index\leftPartialViews\BottomLeftPanel.css" />
     <Content Include="Content\CustomCss\Index\leftPartialViews\leftTopPanel.css" />
     <Content Include="Content\CustomCss\Index\RightDetailsView\RightDetailsSection.css" />
