--- a/MealPreppers/MealPreppers/MealPreppers.csproj
+++ b/MealPreppers/MealPreppers/MealPreppers.csproj
@@ -135,6 +135,7 @@
     <Content Include="Content\CustomCss\Index\leftPartialViews\BottomLeftPanel.css" />
     <Content Include="Content\CustomCss\Index\leftPartialViews\leftTopPanel.css" />
     <Content Include="Content\CustomCss\Index\RightDetailsView\RightDetailsSection.css" />
+    <Content Include="Content\CustomCss\MyProfile\MiddleView\MyProfileMiddleCSS.css" />
     <Content Include="Content\CustomCss\Shared\SharedClasses.css" />
     <Content Include="Content\Images\ricebowl.png" />
     <Content Include="favicon.ico" />
@@ -172,6 +173,7 @@
     <Content Include="Views\Home\Index\Left\_leftTopPanel.cshtml" />
     <Content Include="Views\Home\Index\Right\_RightDetailsPanel.cshtml" />
     <Content Include="Views\Home\Index\Left\_leftBottomPanel.cshtml" />
+    <Content Include="Views\Home\My Profile\Middle\_MyProfileGrid.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
