Reorganized Folder and file structure

--- a/MealPreppers/MealPreppers/MealPreppers.csproj
+++ b/MealPreppers/MealPreppers/MealPreppers.csproj
@@ -166,14 +166,14 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
+    <Content Include="Views\Home\MyProfile\MyProfile.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Index\Middle\_GridView.cshtml" />
     <Content Include="Views\Home\Index\Left\_leftTopPanel.cshtml" />
     <Content Include="Views\Home\Index\Right\_RightDetailsPanel.cshtml" />
     <Content Include="Views\Home\Index\Left\_leftBottomPanel.cshtml" />
-    <Content Include="Views\Home\My Profile\Middle\_MyProfileGrid.cshtml" />
+    <Content Include="Views\Home\MyProfile\Middle\_MyProfileGrid.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
