Reorganized Default Css and Scripts files to their own vendor folders

--- a/MealPreppers/MealPreppers/MealPreppers.csproj
+++ b/MealPreppers/MealPreppers/MealPreppers.csproj
@@ -127,10 +127,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\bootstrap-theme.css" />
-    <Content Include="Content\bootstrap-theme.min.css" />
-    <Content Include="Content\bootstrap.css" />
-    <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Vendor\bootstrap-theme.css" />
+    <Content Include="Content\Vendor\bootstrap-theme.min.css" />
+    <Content Include="Content\Vendor\bootstrap.css" />
+    <Content Include="Content\Vendor\bootstrap.min.css" />
     <Content Include="Content\CustomCss\Index\GridView\GridCss.css" />
     <Content Include="Content\CustomCss\Index\leftPartialViews\BottomLeftPanel.css" />
     <Content Include="Content\CustomCss\Index\leftPartialViews\leftTopPanel.css" />
@@ -146,24 +146,24 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <Content Include="Scripts\bootstrap.js" />
-    <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\Vendor\bootstrap.js" />
+    <Content Include="Scripts\Vendor\bootstrap.min.js" />
     <Content Include="fonts\FontAwesome.otf" />
     <Content Include="fonts\fontawesome-webfont.woff2" />
     <Content Include="fonts\fontawesome-webfont.woff" />
     <Content Include="fonts\fontawesome-webfont.ttf" />
     <Content Include="fonts\fontawesome-webfont.eot" />
-    <None Include="Scripts\jquery-3.4.1.intellisense.js" />
-    <Content Include="Scripts\jquery-3.4.1.js" />
-    <Content Include="Scripts\jquery-3.4.1.min.js" />
-    <Content Include="Scripts\jquery-3.4.1.slim.js" />
-    <Content Include="Scripts\jquery-3.4.1.slim.min.js" />
-    <None Include="Scripts\jquery.validate-vsdoc.js" />
-    <Content Include="Scripts\jquery.validate.js" />
-    <Content Include="Scripts\jquery.validate.min.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
-    <Content Include="Scripts\modernizr-2.8.3.js" />
+    <None Include="Scripts\Vendor\jquery-3.4.1.intellisense.js" />
+    <Content Include="Scripts\Vendor\jquery-3.4.1.js" />
+    <Content Include="Scripts\Vendor\jquery-3.4.1.min.js" />
+    <Content Include="Scripts\Vendor\jquery-3.4.1.slim.js" />
+    <Content Include="Scripts\Vendor\jquery-3.4.1.slim.min.js" />
+    <None Include="Scripts\Vendor\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\Vendor\jquery.validate.js" />
+    <Content Include="Scripts\Vendor\jquery.validate.min.js" />
+    <Content Include="Scripts\Vendor\jquery.validate.unobtrusive.js" />
+    <Content Include="Scripts\Vendor\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\Vendor\modernizr-2.8.3.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -187,7 +187,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Content\Index\" />
     <Folder Include="Models\" />
     <Folder Include="Scripts\Index\Model\" />
     <Folder Include="Scripts\Index\Views\" />
@@ -197,13 +196,13 @@
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
-    <Content Include="Content\bootstrap.min.css.map" />
-    <Content Include="Content\bootstrap.css.map" />
-    <Content Include="Content\bootstrap-theme.min.css.map" />
-    <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="Content\Vendor\bootstrap.min.css.map" />
+    <Content Include="Content\Vendor\bootstrap.css.map" />
+    <Content Include="Content\Vendor\bootstrap-theme.min.css.map" />
+    <Content Include="Content\Vendor\bootstrap-theme.css.map" />
     <None Include="packages.config" />
-    <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
-    <Content Include="Scripts\jquery-3.4.1.min.map" />
+    <Content Include="Scripts\Vendor\jquery-3.4.1.slim.min.map" />
+    <Content Include="Scripts\Vendor\jquery-3.4.1.min.map" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
