turbo smurfed - add modal to database complete
- made it so i could pass an object to the controller by also creating an "AddRecipe" model

- added a resultmessage model

- passed the object from the controller to the datafactory "SaveRecipe" to of which sends the object to the database

- had to hook up the webconfig and database and all that stuff so i could actualy send to the database

- finally sent to data base successfully

-poggers

--- a/MealPreppers/MealPreppers/MealPreppers.csproj
+++ b/MealPreppers/MealPreppers/MealPreppers.csproj
@@ -121,9 +121,12 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="DataFactory\SaveRecipe.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\AddRecipe.cs" />
+    <Compile Include="Models\ResultMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -193,7 +196,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
     <Folder Include="Scripts\Index\Model\" />
     <Folder Include="Scripts\Index\Views\" />
   </ItemGroup>
