--- a/MealPreppers/MealPreppers/Web.config
+++ b/MealPreppers/MealPreppers/Web.config
@@ -4,6 +4,10 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+	<connectionStrings>
+		<add name="Meal_Preppers_Connections" connectionString="Data Source=DESKTOP-5F5BU6V\SQLEXPRESS; Initial Catalog=mealpreppers;Integrated Security=true"/>
+
+	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
