turbo smurf v.2 - Grid receives all recipes from the database
PROBLEM: Adding a new item is resulting in problems when coming back to the view, most likely an issue with how I am passing in the controller

--- a/MealPreppers/MealPreppers/MealPreppers.csproj
+++ b/MealPreppers/MealPreppers/MealPreppers.csproj
@@ -121,11 +121,12 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="DataFactory\GetAllRecipes.cs" />
     <Compile Include="DataFactory\SaveRecipe.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\AddRecipe.cs" />
+    <Compile Include="Models\RecipeItem.cs" />
     <Compile Include="Models\ResultMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -193,6 +194,7 @@
     <Content Include="Views\Home\Feed\Feed.cshtml" />
     <Content Include="Views\Home\Feed\_FeedPartial.cshtml" />
     <Content Include="Views\Home\Index\Left\_addRecipePartialModal.cshtml" />
+    <Content Include="Views\Home\Index\Middle\_GridItemPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
