--- a/MealPreppers/MealPreppers/MealPreppers.csproj
+++ b/MealPreppers/MealPreppers/MealPreppers.csproj
@@ -121,11 +121,12 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="DataFactory\GetAllRecipes.cs" />
     <Compile Include="DataFactory\SaveRecipe.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\AddRecipe.cs" />
+    <Compile Include="Models\RecipeItem.cs" />
     <Compile Include="Models\ResultMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
