turned security off

--- a/MealPreppers/MealPreppers/Web.config
+++ b/MealPreppers/MealPreppers/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
 	<connectionStrings>
-		<add name="Meal_Preppers_Connections" connectionString="Data Source=DESKTOP-5F5BU6V\SQLEXPRESS; Initial Catalog=mealpreppers;Integrated Security=true"/>
+		<add name="Meal_Preppers_Connections" connectionString="Data Source=DESKTOP-5F5BU6V\SQLEXPRESS; Initial Catalog=mealpreppers;Integrated Security=false"/>
 
 	</connectionStrings>
   <appSettings>
