changed webconfig to work with remote Database

--- a/MealPreppers/MealPreppers/Web.config
+++ b/MealPreppers/MealPreppers/Web.config
@@ -5,13 +5,13 @@
   -->
 <configuration>
 	<connectionStrings>
-		<add name="Meal_Preppers_Connections" connectionString="Data Source=DESKTOP-5F5BU6V\SQLEXPRESS; Initial Catalog=mealpreppers;Integrated Security=false"/>
+		<add name="Meal_Preppers_Connections" connectionString="Data Source=DESKTOP-5F5BU6V\SQLEXPRESS; Initial Catalog=mealpreppers; User ID=sas; Password=meat124yum"/>
 
 	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
-    <add key="ClientValidationEnabled" value="true" />
+    <add key="ClientValidationEnabled" value="false" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
